--- a/package.json
+++ b/package.json
@@ -9,16 +9,48 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "@emotion/styled": "^11.14.0",
+    "@mantine/core": "^7.17.2",
+    "@mantine/form": "^7.17.2",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^6.4.7",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@react-spring/web": "^9.7.4",
+    "@splinetool/react-spline": "^4.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.40.0",
+    "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.5.0",
+    "lucide-react": "^0.482.0",
+    "motion": "^12.5.0",
+    "mysql2": "^3.13.0",
+    "next": "15.2.2",
+    "ogl": "^1.0.11",
+    "prettier": "^3.5.3",
+    "react": "^18.2.19",
+    "react-awesome-reveal": "^4.3.1",
+    "react-dom": "^18.2.19",
+    "react-just-parallax": "^3.1.16",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.167.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/bun": "latest",
+    "@types/node": "^20",
+    "@types/react": "^18.2.19",
+    "postcss": "^8",
+    "@types/react-dom": "^18.2.19",
+    "drizzle-kit": "^0.30.5",
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.3",
+    "typescript": "^5"
   }
 }
